# Aryans_RoboVision_Takneek25

./: README.md
src/robot/: CMakeLists.txt  package.xml
src/robot/launch/: robot_world.launch.py
src/robot_pointcloud_project/: CMakeLists.txt  package.xml
src/robot_pointcloud_project/launch/: robot_world.launch.py
src/robot_pointcloud_project/src/: robot_motion.py  stichting.py
src/robot_pointcloud_project/urdf/: myrobot.urdf  myrobot.xacro  robot.gazebo
