<?xml version="1.0"?>
<package format="3">
  <name>robot_pointcloud_project</name>
  <version>0.0.1</version>
  <description>Robot Vision Project</description>
  <maintainer email="you@todo.todo">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
